// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Empty Header component 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
  fluid={true}
>
  <div
    className="container-fluid"
  >
    <span
      className="navbar-brand"
    >
      React Test App
    </span>
    <button
      aria-controls="navbarScroll"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="justify-content-end navbar-collapse collapse"
      id="navbarScroll"
    >
      <div
        className="d-flex align-items-center w-25"
      >
        <label
          className="w-50 form-label"
        >
          Filter by 
        </label>
        <select
          className="form-select"
          defaultValue="select"
          disabled={true}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value="select"
          >
            Select file name
          </option>
          <option
            value="all"
          >
            All
          </option>
        </select>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Test Header component 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
  fluid={true}
>
  <div
    className="container-fluid"
  >
    <span
      className="navbar-brand"
    >
      React Test App
    </span>
    <button
      aria-controls="navbarScroll"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="justify-content-end navbar-collapse collapse"
      id="navbarScroll"
    >
      <div
        className="d-flex align-items-center w-25"
      >
        <label
          className="w-50 form-label"
        >
          Filter by 
        </label>
        <select
          className="form-select"
          defaultValue="select"
          disabled={false}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value="select"
          >
            Select file name
          </option>
          <option
            value="test1.csv"
          >
            test1.csv
          </option>
          <option
            value="test2.csv"
          >
            test2.csv
          </option>
          <option
            value="test3.csv"
          >
            test3.csv
          </option>
          <option
            value="test4.csv"
          >
            test4.csv
          </option>
          <option
            value="test5.csv"
          >
            test5.csv
          </option>
          <option
            value="test6.csv"
          >
            test6.csv
          </option>
          <option
            value="test9.csv"
          >
            test9.csv
          </option>
          <option
            value="all"
          >
            All
          </option>
        </select>
      </div>
    </div>
  </div>
</nav>
`;
